--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-awesome": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
