--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.5.17",
     "vue-awesome": "^3.2.0",
     "vue-router": "^3.0.1",
+    "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
