--- a/vue-frontend/public/manifest.json
+++ b/vue-frontend/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "rgba(213, 94, 90, 0.95)",
   "theme_color": "rgba(213, 94, 90, 0.95)"
 }
